# float

./: Cargo.toml  README.md  config.example.toml  flake.nix
.github/workflows/: rust.yml  update-flake-lock.yml
src/: compositor.rs  wm.rs
