[package]
name = "float-mux"
version = "1.2.0"
edition = "2024"
description = "Floating window terminal multiplexer"
license = "MIT"
repository = "https://github.com/henktorius/float"
readme = "README.md"
keywords = ["tui", "terminal", "tool", "utility"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
vt100 = "0.16.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
